@@ -1,5 +1,14 @@
 2008-07-30  Johan Dahlin  <johan@flumotion.com>
 
+	* flumotion/common/bugreporter.py:
+	* flumotion/common/bundle.py:
+	* flumotion/common/bundleclient.py:
+	* flumotion/common/common.py:
+	* flumotion/common/componentui.py:
+	pep8.py:ify
+
+2008-07-30  Johan Dahlin  <johan@flumotion.com>
+
 	* misc/pep8.py:
 	Add a script which checks PEP-8 compilance.
 
